Added mustache gem

--- a/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
+++ b/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
@@ -114,6 +114,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.0.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\liquid-2.4.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\log4r-1.1.10.gem" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\mustache-0.99.4.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\partialruby-0.2.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\rack-1.1.0.gem" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\cache\rack-protection-1.2.0.gem" />
@@ -1238,6 +1239,71 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\testyaml_arrays.yaml" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\testyaml_injection.yaml" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\test_helper.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\bin\mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\context.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\generator.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\parser.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\settings.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\sinatra.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\rack\bug\panels\mustache_panel.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\rack\bug\panels\mustache_panel\mustache_extension.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\rack\bug\panels\mustache_panel\view.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\LICENSE" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.1" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.1.ron" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.5" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.5.ron" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\Rakefile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\README.md" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\autoloading_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\comments.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\comments.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\complex_view.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\complex_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\crazy_recursive.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\crazy_recursive.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\delimiters.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\delimiters.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\dot_notation.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\dot_notation.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\double_section.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\double_section.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\escaped.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\escaped.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\inner_partial.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\inverted_section.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\inverted_section.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\lambda.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\lambda.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\method_missing.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\namespaced.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\namespaced.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\nested_objects.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\nested_objects.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\node.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\partial_with_module.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\partial_with_module.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\passenger.conf" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\passenger.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\recursive.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\recursive.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\simple.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\simple.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\template_partial.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\template_partial.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\unescaped.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\unescaped.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\utf8.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\utf8_partial.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\helper.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\mustache_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\parser_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\partial_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\spec_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\template_test.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\partialruby-0.2.0\AUTHORS" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\partialruby-0.2.0\CHANGELOG" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\partialruby-0.2.0\lib\partialruby.rb" />
@@ -1498,6 +1564,7 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\json_pure-1.7.5.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\liquid-2.0.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\log4r-1.1.10.gemspec" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\mustache-0.99.4.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\partialruby-0.2.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\rack-1.1.0.gemspec" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\specifications\rack-protection-1.2.0.gemspec" />
@@ -2248,6 +2315,10 @@
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\examples\moderate.xml" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\examples\rrconfig.xml" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\testconf.xml" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.1.html" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\man\mustache.5.html" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\inner_partial.txt" />
+    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\test\fixtures\template_partial.txt" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\rack-1.1.0\contrib\rack_logo.svg" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\History.txt" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\Manifest.txt" />
