Cleanup of gem folder

--- a/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
+++ b/src/IronSharePoint.IronRuby10/IronSharePoint.IronRuby10.csproj
@@ -1051,6 +1051,45 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.0\test\iron_templates\mustache_test.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.0\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\.travis.yml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\console\utils.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\iron_composite_control.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\iron_control.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\iron_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\main_http_handler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\mixins\control_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\mixins\logging.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\mixins\parent_attributes.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\mixins\type_registration.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\object.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\sass_compiler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\iron_sharepoint\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\log4r\outputter\iron_logs_outputter.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\lib\log4r\outputter\iron_runtime_outputter.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\Rakefile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_sharepoint-1.0.3\README.md" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\lib\iron_templates.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\lib\iron_templates\haml.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\lib\iron_templates\hamstache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\lib\iron_templates\mustache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\lib\iron_templates\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\Rakefile" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\README.md" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\partial.hamstache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\partial.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\test.haml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\test.hamstache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\test.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\with_hamstache_partial.hamstache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\with_mustache_partial.hamstache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\with_partial.haml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\with_partial.mustache" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\assets\_partial.haml" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\haml_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\hamstache_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\helper\test_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\iron_templates\mustache_test.rb" />
+    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\iron_templates-1.0.1\test\test_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\CHANGES" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\COPYING" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\COPYING-json-jruby" />
@@ -1258,7 +1297,6 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\testyaml_arrays.yaml" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\testyaml_injection.yaml" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\log4r-1.1.10\tests\test_helper.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\bin\mustache" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\context.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\mustache-0.99.4\lib\mustache\generator.rb" />
@@ -1485,15 +1523,9 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\rack-protection-1.2.0\spec\session_hijacking_spec.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\rack-protection-1.2.0\spec\spec_helper.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\rack-protection-1.2.0\spec\xss_header_spec.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\.autotest" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\.gemtest" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\bin\r2r_show" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\lib\ruby2ruby.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\Rakefile" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby2ruby-1.3.1\test\test_ruby2ruby.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\.autotest" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\.gemtest" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\bin\ruby_parse" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\lib\gauntlet_rubyparser.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\lib\ruby_lexer.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\lib\ruby_parser.rb" />
@@ -1503,7 +1535,6 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\test\test_ruby_lexer.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\test\test_ruby_parser.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\ruby_parser-2.3.1\test\test_ruby_parser_extras.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\.gemtest" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\lib\composite_sexp_processor.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\lib\pt_testcase.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\lib\sexp.rb" />
@@ -1514,7 +1545,6 @@
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\test\test_environment.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\test\test_sexp.rb" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\sexp_processor-3.2.0\test\test_sexp_processor.rb" />
-    <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\bin\tilt" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\COPYING" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\Gemfile" />
     <None Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\tilt-1.3.3\lib\tilt.rb" />
@@ -2297,7 +2327,6 @@
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-3.0.25\vendor\fssm\spec\root\duck\quack.txt" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-3.0.25\vendor\fssm\spec\root\file.css" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\haml-3.0.25\vendor\fssm\spec\root\moo\cow.txt" />
-    <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\.gitignore" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\data\index.html" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\data\prototype.js" />
     <Content Include="TEMPLATE\Features\IronSP_IronRuby10\Lib\ironruby\gems\1.8\gems\json_pure-1.7.5\ext\json\ext\fbuffer\fbuffer.h" />
