--- a/src/IronSharePoint/IronSharePoint.csproj
+++ b/src/IronSharePoint/IronSharePoint.csproj
@@ -219,6 +219,29 @@
     <None Include="Package\Package.Template.xml">
       <DependentUpon>Package.package</DependentUpon>
     </None>
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\console\utils.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\log4r\outputter\iron_logs_outputter.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\ext\log4r\outputter\iron_memory_outputter.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_composite_control.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_control.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\iron_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\main_http_handler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\control_view.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\logging.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\parent_attributes.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\mixins\type_registration.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\object.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\action_view\reloadable_template.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\core\string.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\patches\i18n\i18n.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\sass_compiler.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\variation.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_sharepoint\version.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_templates\haml.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_templates\hamstache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_templates\mustache.rb" />
+    <None Include="TEMPLATE\Features\IronSP_Root\iron_templates\version.rb" />
     <None Include="TEMPLATE\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{c49100b2-651a-4d69-8bbe-bc1ad369b13a}</SharePointProjectItemId>
     </None>
@@ -316,7 +339,6 @@
     <Content Include="Lists\IronHive\Schema.xml" />
     <Content Include="Lists\IronHive\Upload.aspx" />
     <Content Include="Lists\IronLogs\Elements.xml" />
-    <Content Include="TEMPLATE\Features\IronSP_Root\_IMPORTANT.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\SharePointTools\Microsoft.VisualStudio.SharePoint.targets" />
